@startuml

package Objects{
    class Bullet{
        -reflectionMax : int
        +OnCollisionEnter2D() : void
        -Move() : void
    }

    class Tank{
        -number : int
        -explosionPrefab : GameObject
        +Explode() : void
        +Move() : void
        +OnCollisionEnter2D() : void
    }

    class Explosion{
        +OnExplosionHalf() : void
        +OnExplosionEnd() : void
    }

    class Cannon{
        +Shoot(): void
        +Turn() : void
    }

    class PlayerController{
        -GetKeys() : void
    }

    interface CollidableObject{
        +whose : int
    }
}

package Managers{
    class GameManager{
        -CheckGameSet() : void
    }

    class UIManager{
        -OnGameSet() : void
    }
}

package UIs{
    class RetryButton{
        +OnClick() : void
    }
}

PlayerController -> Tank

Tank *- Cannon

Cannon --> Bullet

Tank *-- Explosion

Tank -|> CollidableObject
Bullet -|> CollidableObject

Tank --> GameManager
Cannon --> GameManager

GameManager --> UIManager

RetryButton --> GameManager

@enduml